--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=127.0.0.1;user id=earh;password=123456;port=3306;database=bodega;"
+    //"BodegasContext": "Server=(localdb)\\mssqllocaldb;Database=BodegasContext-d6f8ec41-10b6-4434-a993-8fc95da7ba35;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
